# nova-sonic-voice

./: .gitignore  BLOG_POST.md  DEMO_SCRIPT.md  DEVPOST_DESCRIPTION.md  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md
docs/: architecture.mermaid  blog-post-builder-aws.md  demo-video-script.md  devpost-description.md
src/nova_sonic/: __init__.py  __main__.py  agent.py  audio.py  cli.py  discord_bridge.py  orchestrator.py  session.py
tests/: test_agent.py  test_audio.py  test_cli.py  test_discord_bridge.py  test_orchestrator.py  test_session.py
tests/manual/: test_agent_file.py  test_nova_sonic.py  test_nova_sonic_file.py
