[project]
name = "nova-sonic-voice"
version = "0.1.0"
description = "Real-time voice agent powered by Amazon Nova 2 Sonic"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "Airy", email = "heyitsairy@gmail.com"},
]
dependencies = [
    "aws-sdk-bedrock-runtime>=0.3.0",
    "pyaudio>=0.2.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nova_sonic"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
